syntax = "proto3";

package soundboard;

service SoundBoard {
    rpc PlaySong (PlaySongRequest) returns (PlaySongReply) {}
    rpc JoinMe(JoinMeRequest) returns (JoinMeReply) {}
    rpc ListSongs(ListSongsRequest) returns (ListSongsReply) {}
    rpc ListUsers(ListUsersRequest) returns (ListUsersReply) {}
}

message PlaySongRequest {
    string fileName = 1;
}
  
message PlaySongReply {}

message JoinMeRequest {
    string userId = 1;
}

message JoinMeReply {}

message ListSongsRequest{}

message ListSongsReply {
    repeated string files = 1;
}

message ListUsersRequest {
    bool onlyOnline = 1;
    string filter = 2;
}

message User {
    string id = 1;
    string name = 2;
}

message ListUsersReply {
    repeated User users = 1;
}